--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
 PORT = 3000
 
-MONGO_URL = mongodb://127.0.0.1:27017/products-management
-
-# COOKIE_PARSE = TUAN10102003
+MONGO_URL = mongodb+srv://anhtuan6563:ancucdi123@cluster0.shxvw.mongodb.net/product-management
