--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
     "version": 2,
-    "build": [
+    "builds": [
         {
             "src": "index.js",
             "use": "@vercel/node"
         }
     ],
-    "route": [
+    "routes": [
         {
             "src": "/(.*)",
             "dest": "index.js"
