--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT = 3000
 
 MONGO_URL = mongodb+srv://anhtuan6563:ancucdi123@cluster0.shxvw.mongodb.net/product-management
+
+CLOUD_NAME =  dbs2uzavi
+CLOUD_KEY = 721428961485744
+CLOUD_SECRET = F1lVgE-cd3gamFacwDIzCuC5wkE
